# lightning_db

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ANALYSIS_REPORT.md  API.md  API_REFACTORING_SUMMARY.md  API_REFERENCE.md  BENCHMARK_RESULTS.md  CACHE_OPTIMIZATIONS.md  CHANGELOG.md  CHAOS_TEST_FIXES.md  CHAOS_TEST_SUCCESS.md  CI_IMPROVEMENTS.md  CI_WORK_SUMMARY.md  CLEANUP_SUMMARY.md  COMPETITIVE_BENCHMARKS.md  COMPILATION_PROGRESS.md  COMPLETE_FEATURE_SUMMARY.md  COMPLETE_STATUS.md  COMPLETION_REPORT.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_2025.md  COMPREHENSIVE_LOGGING_GUIDE.md  COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  CONFIGURATION.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  CRASH_RECOVERY_ERROR_PROPAGATION_SUMMARY.md  CRITICAL_FINDINGS.md  CRITICAL_FIXES_STATUS.md  Cargo.toml  DART_SDK_DEVELOPMENT_GUIDE.md  DART_SDK_IMPROVEMENTS.md  DATABASE_MIGRATION_GUIDE.md  DEADLOCK_ANALYSIS_REPORT.md  DEPLOYMENT.md  DISASTER_RECOVERY_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_V1.md  (+108 more)
.cargo/: config.toml
.github/: SECURITY.md  dependabot.yml
archive/: RACE_CONDITION_ANALYSIS_REPORT.md  README.md  TIMING_ATTACK_SECURITY_REPORT.md
archived_docs/: COMPREHENSIVE_TESTING_REPORT.md  CRITICAL_ISSUES_FOUND.md  FINAL_ANALYSIS_REPORT.md  FINAL_PRODUCTION_READINESS_REPORT.md  PERFORMANCE_ANALYSIS_REPORT.md  PRODUCTION_PROGRESS_REPORT.md  PRODUCTION_READINESS_FINAL.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_STATUS_FINAL.md  STRESS_TEST_REPORT.md  TEST_STATUS_REPORT.md  TRANSACTION_ACCURACY_ISSUE.md
archived_scripts/: crash_recovery_test.sh  large_dataset_test.sh  quick_concurrent_test.sh  stress_test_concurrent.sh
archived_tests/: concurrent_loss_test.rs  crash_recovery_load_test.rs  crud_verification_test.rs  debug_concurrent_writes.rs  debug_flush.rs  debug_lsm_state.rs  debug_sstable_recovery.rs  debug_sstable_search.rs  debug_transaction_conflicts.rs  debug_transaction_flow.rs  large_dataset_test.rs  lsm_flush_test.rs  minimal_crud_test.rs  production_validation_test.rs  simple_lock_free_test.rs  simple_perf_test.rs  test_transactions.rs  test_version_store_race.rs  transaction_debug_test.rs  transaction_precision_test.rs  transaction_stress_test.rs
benches/: basic_benchmarks.rs  comprehensive_benchmarks.rs  comprehensive_regression_suite.rs  critical_operations.rs  critical_path_performance.rs  distributed_cache_bench.rs  encryption_benchmarks.rs  mmap_benchmark.rs  optimization_benchmarks.rs  performance.rs  performance_benchmarks.rs  performance_regression_suite.rs  performance_report.rs  performance_tuning.rs  production_benchmarks.rs  safe_alternatives_benchmark.rs  simple_production_test.rs
crash_test_backup/: backup_metadata.json  btree.db.zst
docker/: Dockerfile.production  docker-compose.yml
docs/: ANALYTICS_USAGE_GUIDE.md  API.md  BACKUP_RESTORE_RUNBOOK.md  CLI.md  CONFIGURATION.md  ENTERPRISE_HARDENING_PLAN_V2.md  FINAL_SIGN_OFF_REPORT.md  OLAP_VALIDATION_REPORT.md  OLTP_HARDENING_REPORT.md  OPS_SRE_PLAYBOOK.md  PRODUCTION_GUIDE.md  PRODUCTION_RUNBOOKS.md  README.md  SCHEMA_CATALOG.md  SCHEMA_INTEGRITY_REPORT.md  TEST_SUITE_OVERHAUL.md  api-reference.md  architecture-overview.md  benchmarking-guide.md  debugging-guide.md  development-guide.md  faq.md  integration-guide.md  operations-manual.md  performance-profiling-guide.md  production-readiness.md
examples/: README.md  all_features.rs  backup_restore_test.rs  basic_usage.rs  bench_async_io.rs  bench_auto_batcher.rs  bench_batched.rs  bench_components.rs  bench_compression.rs  bench_final_solution.rs  bench_group_commit.rs  bench_lsm_direct.rs  bench_no_sync.rs  bench_secondary_index.rs  bench_secondary_indexes.rs  bench_verified.rs  bench_write_batcher.rs  bench_write_methods.rs  benchmark.rs  benchmark_cache_performance.rs  benchmark_optimizations.rs  benchmark_write_batch.rs  best_practices.rs  btree_bench.rs  btree_deletion_analysis.rs  cache_test.rs  chaos_engineering_suite.rs  chaos_engineering_suite_fixed.rs  chaos_engineering_suite_working.rs  chaos_kill_test.rs  chaos_test.rs  check_lsm_memtable.rs  check_wal_contents.rs  compaction_demo.rs  comprehensive_logging_demo.rs  comprehensive_test.rs  compression_bench.rs  concurrent_safety_test.rs  concurrent_test.rs  config_management_demo.rs  (+157 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: unsafe_code_fuzzer.rs
lightning-db-ffi/: .gitignore  Cargo.toml  FFI_API_REFERENCE.md  INTEGRATION_GUIDE.md  README.md  build.rs  cbindgen.toml
lightning-db-ffi/dart_bindings/: README.md  ffigen.yaml  pubspec.yaml
lightning-db-ffi/dart_bindings/example/: basic_usage.dart
lightning-db-ffi/dart_bindings/lib/: lightning_db.dart
lightning-db-ffi/dart_bindings/lib/src/: database.dart  errors.dart  ffi_bindings.dart
lightning-db-ffi/dart_bindings/test/: lightning_db_test.dart
lightning-db-ffi/dart_bindings/tool/: generate_bindings.dart
lightning-db-ffi/examples/: Makefile  basic_usage.c  performance_test.c  python_example.py  simple_test.c
lightning-db-ffi/include/: lightning_db_ffi.h
lightning-db-ffi/src/: lib.rs
lightning-db-ffi/tests/: error_handling_test.rs  integration_test.rs
lightning_db/: .gitignore  .metadata  LICENSE  README.md  pubspec.yaml
lightning_db_dart/: LICENSE  README.md  ffigen.yaml  pubspec.yaml  test_flutter_integration.dart
lightning_db_dart/linux/: CMakeLists.txt
lightning_db_ffi/: Cargo.toml  SECURITY_AUDIT_REPORT.md  build.rs  cbindgen.toml
lightning_db_ffi/src/: error.rs  handle_registry.rs  lib.rs  panic_guard.rs  utils.rs  validation.rs
lightning_db_ffi/src/ffi/: database_ffi.rs  error_ffi.rs  iterator_ffi.rs  mod.rs  transaction_ffi.rs
lightning_db_ffi/tests/: basic_ffi_test.rs  security_tests.rs
lightning_db_wasm/: Cargo.toml
lightning_db_wasm/src/: lib.rs
migrations/: 001_initial_schema.rs.template
proto/: database.proto
scripts/: analyze_benchmarks.py  background_hardening.sh  backup_automation.sh  baseline_olap.sh  baseline_olap_kv.sh  baseline_oltp.sh  build-all-platforms.sh  build_all.sh  build_all_platforms.sh  (+26 more)
(+1886 files in other folders)
