[workspace]
members = [".", "lightning_db_ffi", "lightning_db_wasm"]
resolver = "2"

[package]
name = "lightning_db"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
bytes = "1.10"
memmap2 = "0.9"
parking_lot = "0.12"
crc32fast = "1.4"
zstd = { version = "0.13", default-features = false, features = ["zstdmt"], optional = true }
lz4_flex = "0.11"
snap = "1.1"
dashmap = "6.1" # Stable version for production use
ahash = "0.8" # SIMD-optimized hashing
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
thiserror = "1.0" # Consistent version across workspace
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "registry", "std"] }
# Pinning OpenTelemetry versions to avoid conflicts
tracing-opentelemetry = "=0.21.0"
opentelemetry = { version = "=0.20.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "=0.20.0", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-jaeger = { version = "=0.19.0", features = ["collector_client", "rt-tokio"] }
opentelemetry-prometheus = "=0.13.0"
tracing-log = "0.2"
tracing-appender = "0.2"
hostname = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
lru = "0.16" # Upgraded for hashbrown consolidation
tokio = { version = "1.42", features = ["rt-multi-thread", "net", "io-util", "fs", "time", "sync", "macros"] } # Optimized features, removed unused
tokio-util = "0.7"
crossbeam = "0.8.4"
crossbeam-queue = "0.3"
rayon = "1.10.0"
async-trait = "0.1"
prometheus = "0.14"
lazy_static = "1.5"
once_cell = "1.19"
petgraph = "0.6"
rand = "0.9"
rand_core = "0.6"
rand_chacha = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
histogram = "0.11"
hdrhistogram = "7.5"
clap = { version = "4.5", features = ["derive"] }
smallvec = { version = "1.13", features = ["union", "serde"] }
bumpalo = "3.14"
indexmap = "2.5"
rustc-hash = "2.0"
futures = "0.3"
roaring = "0.10"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.20"
hex = "0.4"
num_cpus = "1.16"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
fastrand = "2.1"

# Core dependencies only
regex = "1.10"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
crossbeam-channel = "0.5"
flate2 = "1.0"
warp = "0.3"
libc = "0.2"

# Encryption dependencies
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
sha2 = "0.10"
blake3 = "1.5"
zeroize = { version = "1.8", features = ["derive"] }

# Security dependencies
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
x509-parser = "0.16"
webpki-roots = "0.26"
jsonwebtoken = "9.3"
bcrypt = "0.16"
secrecy = { version = "0.8", features = ["serde"] }
tokio-rustls = "0.25"
constant_time_eq = "0.3"
subtle = "2.6"
ratelimit = "0.9"
governor = "0.6"
ipnet = "2.10"
regex-automata = "0.4"
serde_bytes = "0.11"

# Optional feature-gated dependencies
notify = { version = "6.1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
sysinfo = { version = "0.33", optional = true }
csv = { version = "1.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.6"
proptest = "1.7"
tempfile = "3.20"
rand = "0.9"
env_logger = "0.11"
serial_test = "3.2"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
flate2 = "1.0"
sha2 = "0.10"
nix = { version = "0.29", features = ["fs"] }
ctor = "0.2"
rayon = "1.10.0"
# Memory safety testing dependencies
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = "1.3"

[build-dependencies]
prost = "0.13"
prost-build = "0.13"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["zstd-compression"]
zstd-compression = ["zstd"]
ios = []
wasm = []
data-import = ["csv"]
data-export-parquet = []
proto = []
lzma = []
brotli = []
file-watching = ["notify"]
config-formats = ["serde_yaml", "toml"]
http-client = ["reqwest"]
sys-info = ["sysinfo"]
opentelemetry = []
testing = []
numa_syscalls = []
cli-tools = []
rand = []
# Memory safety testing features
memory-safety-tests = []
asan = []
tsan = []
msan = []
ubsan = []

[lib]
name = "lightning_db"
crate-type = ["rlib"]

[[bin]]
name = "lightning-cli"
path = "src/bin/lightning-cli.rs"

[[bin]]
name = "lightning-admin"
path = "src/bin/lightning-admin.rs"

[[bin]]
name = "lightning-admin-server"
path = "src/bin/lightning-admin-server.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# Mobile-optimized profile
[profile.mobile]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = true
strip = true

# Dependency consolidation: Using cargo update to resolve duplicates
# Run: cargo update -p hashbrown -p itertools to consolidate versions

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[bench]]
name = "mmap_benchmark"
harness = false

[[bench]]
name = "basic_benchmarks"
harness = false

[[bench]]
name = "encryption_benchmarks"
harness = false

[[bench]]
name = "performance_regression_suite"
harness = false

[[bench]]
name = "production_benchmarks"
harness = false

[[bench]]
name = "simple_production_test"
harness = false

[[bench]]
name = "comprehensive_regression_suite"
harness = false
