[workspace]
members = [".", "lightning_db_ffi", "lightning_db_wasm"]
resolver = "2"

[package]
name = "lightning_db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core storage and memory management
bytes = "1.10"
memmap2 = "0.9"
parking_lot = "0.12"
dashmap = "6.1"
smallvec = { version = "1.13", features = ["union", "serde"] }

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "net", "io-util", "fs", "time", "sync", "macros", "signal"] }
async-trait = "0.1"

# Concurrency primitives
crossbeam-skiplist = "0.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

# Compression (minimal set)
lz4_flex = "0.11"
snap = "1.1"
zstd = { version = "0.13", default-features = false, features = ["zstdmt"], optional = true }

# Cryptography (essential only)
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
blake3 = "1.5"
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling and tracing
thiserror = "1.0"
tracing = "0.1"

# Utilities
once_cell = "1.19"
rand = "0.9"
rand_core = "0.6"
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64", "xxh3"] }
fastrand = "2.1"
libc = "0.2"

# Essential but conditionally used
rayon = "1.10.0"
hex = "0.4"
num_cpus = "1.16"
rustc-hash = "2.0"
lru = "0.16"
tokio-util = "0.7"

# Observability dependencies (used in core features)
prometheus = "0.14"
metrics = "0.24"

# Core algorithm dependencies (actually used)
futures = { version = "0.3", optional = true }

# Optional heavy dependencies
clap = { version = "4.5", features = ["derive"], optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
chrono = { version = "0.4", features = ["serde"] }

# Security dependencies (essential)
pbkdf2 = "0.12"
jsonwebtoken = "9.3"
bcrypt = "0.16"
secrecy = { version = "0.8", features = ["serde"] }
constant_time_eq = "0.3"
governor = "0.6"
ipnet = "2.10"
serde_bytes = "0.11"

# Optional dependencies moved to features
notify = { version = "6.1", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
sysinfo = { version = "0.33", optional = true }
csv = { version = "1.3", optional = true }
warp = { version = "0.3", optional = true }
prost = { version = "0.13", optional = true }


[dev-dependencies]
criterion = "0.6"
proptest = "1.7"
tempfile = "3.20"
env_logger = "0.11"
serial_test = "3.2"
nix = { version = "0.29", features = ["fs"] }
ctor = "0.2"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = "1.3"

[build-dependencies]
prost-build = "0.13"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["futures-util"]
zstd-compression = ["zstd"]
ios = []
wasm = []
data-import = ["csv"]
file-watching = ["notify"]
config-formats = ["serde_yaml", "toml"]
http-client = ["reqwest"]
sys-info = ["sysinfo"]
cli = ["clap"]
futures-util = ["futures"]
web-server = ["warp"]
proto = ["prost"]
lzma = []
brotli = []
rand = []
testing = []
cli-tools = ["clap"]
integration_tests = []

[lib]
name = "lightning_db"
crate-type = ["rlib"]

[[bin]]
name = "lightning-cli"
path = "src/bin/lightning-cli.rs"
required-features = ["cli"]



[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# Mobile-optimized profile
[profile.mobile]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = true
strip = true

# Dependency consolidation: Using cargo update to resolve duplicates
# Run: cargo update -p hashbrown -p itertools to consolidate versions

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "oltp_basic_benchmark"
path = "examples/oltp_basic_benchmark.rs"
required-features = ["integration_tests"]


[[example]]
name = "migration_example"
path = "examples/migration_example.rs"
required-features = ["integration_tests"]

[[example]]
name = "production_validation"
path = "examples/production_validation.rs"
required-features = ["integration_tests"]

[[bench]]
name = "comprehensive_benchmarks"
harness = false


