[package]
name = "lightning_db_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Lightning DB Team"]
description = "WebAssembly bindings for Lightning DB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/santoshakil/lightning_db"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lightning_db = { path = "..", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Storage",
  "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.wasm-pack]
"wasm-opt" = ["-Oz", "--enable-simd"]