[package]
name = "lightning_db_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Lightning DB Team"]
description = "WebAssembly bindings for Lightning DB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/santoshakil/lightning_db"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Storage",
  "Performance",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Profile configuration moved to workspace root

[package.metadata.wasm-pack]
"wasm-opt" = ["-Oz", "--enable-simd"]
